# EG-2

./: Makefile.am  Navigation.py  configure.ac  enigma2.bb  mytest.py  skin.py
data/: Makefile.am  encoding.conf  keymap.xml  menu.xml  setup.xml
data/display400/: Thumbs.db
data/skin_default/: Makefile.am  Thumbs.db
data/skin_default/buttons/: Makefile.am  Thumbs.db
data/skin_default/countries/: Makefile.am  Thumbs.db
data/skin_default/epg/: Makefile.am  Thumbs.db
data/skin_default/extensions/: Makefile.am  Thumbs.db
data/skin_default/icons/: Makefile.am  Thumbs.db
data/skin_default/infobar/: Makefile.am  Thumbs.db
data/skin_default/piconbg/: Makefile.am  Thumbs.db
data/skin_default/screens/: Makefile.am  Thumbs.db
data/spinner/: Makefile.am  Thumbs.db
lib/dvb/: db.cpp  epgcache.cpp
lib/python/: Makefile.am
lib/python/Components/: About.py  FileTransfer.py  Language_cache.py  Lcd.py  MenuList.pyo  RcModel.pyo  VfdSymbols.py
lib/python/Components/Converter/: AnalogClock.py  EGAnalogic.py  EGClockToText.py  EGExtraInfo.py  EGOnLineTest.py  EGRefString.py  EGServiceName.py  EGWeather.py  ExtendedServiceInfo.py  MovieReference.py
lib/python/Plugins/Extensions/EGAMIFaq/: Makefile.am  coverhelper.py  debuglog.py  imports.py  mp_globals.py  plugin.py  simple_lru_cache.py  simpleplayer.py  twagenthelper.py  youtubelink.py  youtubeplayer.py  yt_url.py
lib/python/Plugins/Extensions/EGAMIFaq/skins/: Makefile.am  Thumbs.db
lib/python/Screens/: PowerLost.py  SleepTimerEdit.py  TaskList.py
lib/python/Tools/: IO.py  TextBoundary.py
(+15 files in other folders)
