installdir = $(pkglibdir)/python/Plugins/Extensions/EGAMIFaq

SUBDIRS = skins

install_PYTHON = \
	__init__.py \
	coverhelper.py debuglog.py imports.py mp_globals.py \
	simple_lru_cache.py simpleplayer.py twagenthelper.py \
	plugin.py youtubelink.py youtubeplayer.py yt_url.py

install_DATA = \
	channels.xml \
	channels_1.xml \
	channels_2.xml \
	channels_3.xml 